# sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/lansing_dashboard/: README.md  app.py  requirements.txt
apps/lansing_dashboard/docs/: lansing_dashboard_manual.md
docs/: api_reference.md  codex_handoff.md  lansing_dashboard_manual.md
docs/lansing_kit_start_here/: README.md
examples/: 01_basic_actuator_current.py  02_initialize_and_diagnose.py  03_stream_sine.py  04_debug_logging.py  05_status_snapshot.py  06_manual_output_bench_test.py  07_error_handling.py  08_actuator_pulse_until_key.py
src/fluid_reality/: __init__.py  debug.py  errors.py  protocol.py  transport.py
src/fluid_reality/boards/: __init__.py  base.py  lansing.py  lansing_errors.py
tests/: test_lansing.py
