[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "fluid-reality"
version = "0.1.0"
description = "Python SDK for Fluid Reality hardware."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Fluid Reality" }
]
keywords = ["fluid-reality", "haptics", "actuators", "hardware", "serial"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "pyserial>=3.5"
]

[project.urls]
Homepage = "https://github.com/Fluid-Reality/sdk"
Repository = "https://github.com/Fluid-Reality/sdk"
Issues = "https://github.com/Fluid-Reality/sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fluid_reality"]

[tool.pytest.ini_options]
pythonpath = ["src"]
